--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -8,8 +8,8 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ikube</groupId>
-	<artifactId>ikube-war</artifactId>
-	<packaging>war</packaging>
+	<artifactId>ikube-core</artifactId>
+	<packaging>jar</packaging>
 	<version>1.0</version>
 
 	<parent>
@@ -18,6 +18,15 @@
 		<version>1.0</version>
 		<relativePath>../../../ikube</relativePath>
 	</parent>
+
+	<properties>
+		<main.class>write.a.main.Class.For.stand.Alone</main.class>
+		<write.classes>-Dwrite.classes=false</write.classes>
+		<clean.classes>-Dclean.classes=true</clean.classes>
+		<included.packages>-Dincluded.packages=ikube</included.packages>
+		<excluded.packages>-Dexcluded.packages=</excluded.packages>
+		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
+	</properties>
 
 	<build>
 		<resources>
@@ -30,33 +39,60 @@
 		</resources>
 		<plugins>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
 				<configuration>
-					<port>80</port>
-					<path>/ikube-war-1.0</path>
+					<verbose>true</verbose>
+					<archive>
+						<index>true</index>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>${main.class}</mainClass>
+						</manifest>
+					</archive>
 				</configuration>
-				<dependencies>
-					<!--<dependency>
-						<groupId>oracle.ojdbc6</groupId>
-						<artifactId>ojdbc6</artifactId>
-						<version>11</version>
-						<type>jar</type>
-						<scope>system</scope>
-						<systemPath>${maven.local.repository}/oracle/ojdbc6/11/ojdbc6-11.jar</systemPath>
-					</dependency>-->
-				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>false</skip>
+				</configuration>
+				<executions>
+					<execution>
+						<!--<id>surefire-it</id>
+						<phase>package</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>-->
+						<configuration>
+							<skip>false</skip>
+							<forkMode>once</forkMode>
+							<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
+							<excludes>
+								<exclude>**/*$*.*</exclude>
+								<exclude>**/*ATest*.java</exclude>
+								<exclude>**/*Suite*.java</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2-beta-5</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<manifest>
+              			<addClasspath>true</addClasspath>
+              			<mainClass>${main.class}</mainClass>
+            		</manifest>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>ikube</groupId>
-			<artifactId>ikube-core</artifactId>
-			<version>${version}</version>
-			<scope>compile</scope>
-		</dependency>
-	</dependencies>
 
 </project>
