--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -41,8 +41,8 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/isearch
-jdbc.database=isearch
+jdbc.url=jdbc:db2://isearch:50000/ten
+jdbc.database=ten
 jdbc.port=50000
 jdbc.server=isearch
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
