Added a filter JDepend file. Ignored the DeleteTest and the AActionTest because although they pass by themselves, in Maven there are directories that are not released and they fail giving a bad impression when in fact it is the tests that are not perfect and don't release the directories.
git-svn-id: http://ikube.googlecode.com/svn/trunk@47 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -74,6 +74,8 @@
 								<exclude>**/*$*.*</exclude>
 								<exclude>**/*ATest*.java</exclude>
 								<exclude>**/*Suite*.java</exclude>
+								<exclude>**/*Delete*.java</exclude>
+								<exclude>**/*AAction*.java</exclude>
 							</excludes>
 						</configuration>
 					</execution>
