--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -9,14 +9,14 @@ dead.lock.period=3600000
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
 #the search operations and clients
-web.service.delay=3600000
-web.service.period=3600000
+web.service.delay=180000
+web.service.period=180000
 
 report.delay=180000
 report.period=180000
 
-profiling.delay=3600000
-profiling.period=3600000
+profiling.delay=180000
+profiling.period=180000
 
 jdbc.batch.size=100000
 
