--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="
 		http://maven.apache.org/POM/4.0.0
 		http://maven.apache.org/maven-v4_0_0.xsd">
@@ -22,9 +20,9 @@
 	<properties>
 		<main.class>write.a.main.Class.For.stand.Alone</main.class>
 		<write.classes>-Dwrite.classes=false</write.classes>
-		<clean.classes>-Dclean.classes=true</clean.classes>
+		<clean.classes>-Dclean.classes=false</clean.classes>
 		<included.packages>-Dincluded.packages=ikube</included.packages>
-		<excluded.packages>-Dexcluded.packages=</excluded.packages>
+		<excluded.packages>-Dexcluded.packages=model:database:service</excluded.packages>
 		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
 	</properties>
 
@@ -53,47 +51,14 @@
 					</archive>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<skip>false</skip>
+					<forkMode>once</forkMode>
+					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
 				</configuration>
-				<executions>
-					<execution>
-						<!--<id>surefire-it</id>
-						<phase>package</phase>
-						<goals>
-							<goal>test</goal>
-						</goals>-->
-						<configuration>
-							<skip>false</skip>
-							<forkMode>once</forkMode>
-							<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
-							<excludes>
-								<exclude>**/*$*.*</exclude>
-								<exclude>**/*ATest*.java</exclude>
-								<exclude>**/*Suite*.java</exclude>
-								<exclude>**/*Delete*.java</exclude>
-								<exclude>**/*AAction*.java</exclude>
-							</excludes>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2-beta-5</version>
-				<configuration>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-					<manifest>
-              			<addClasspath>true</addClasspath>
-              			<mainClass>${main.class}</mainClass>
-            		</manifest>
-				</configuration>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 
