git-svn-id: http://ikube.googlecode.com/svn/trunk@49 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -41,10 +41,10 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://isearch:50000/hundred
-jdbc.database=hundred
+jdbc.url=jdbc:db2://jackal:50000/isearch
+jdbc.database=isearch
 jdbc.port=50000
-jdbc.server=isearch
+jdbc.server=jackal
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
