git-svn-id: http://ikube.googlecode.com/svn/trunk@51 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -18,6 +18,9 @@ report.period=180000
 profiling.delay=180000
 profiling.period=180000
 
+cluster.delay=1000
+cluster.period=1000
+
 jdbc.batch.size=100000
 
 buffer.size=512
