--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,19 @@
 <project name="Deploy Ikube to Cluster" default="deploy.war">
 
 	<property file="build.properties" />
+	<property name="ikube.dir" value="ikube-war-${project.version}" />
 	<property name="ikube.war" value="ikube-war-${project.version}.war" />
 
 	<target name="deploy.war">
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="false" />
+		<delete dir="${tomcat.1.webapps}/${ikube.dir}" failonerror="true" />
+		<delete dir="${tomcat.2.webapps}/${ikube.dir}" failonerror="true" />
+		<delete dir="${tomcat.3.webapps}/${ikube.dir}" failonerror="true" />
+		<delete dir="${tomcat.4.webapps}/${ikube.dir}" failonerror="true" />
+
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="true" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="true" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="true" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.4.webapps}" overwrite="true" failonerror="true" />
 	</target>
 
 	<target name="cluster">
