git-svn-id: http://ikube.googlecode.com/svn/trunk@52 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -1,6 +1,6 @@
 #Configuration details for individual instances
 delay=10000
-period=180000
+period=60000
 max.age=36000000
 
 dead.lock.delay=3600000
@@ -22,11 +22,11 @@ jdbc.batch.size=100000
 
 buffer.size=512
 compound.file=true
-merge.factor=100000
-buffered.docs=100000
+merge.factor=1000
+buffered.docs=1000
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=./faqIndex
+index.directory.path=./faq
 
 #General JDBC settings
 jdbc.minPoolSize=1
@@ -47,13 +47,3 @@ jdbc.port=50000
 jdbc.server=isearch
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
-
-#Oracle database
-#jdbc.user=isearch
-#jdbc.password=isearch
-#jdbc.name=Oracle
-#jdbc.driver=oracle.jdbc.driver.OracleDriver
-#jdbc.dataSource=oracle.jdbc.xa.client.OracleXADataSource
-#jdbc.driver.type=4
-#jdbc.url=jdbc:oracle:thin:@//falcon:1521/oracle
-#jdbc:oracle:thin:@//localhost:1521/xe,
