--- a/modules/core/src/main/resources/META-INF/log4j.properties
+++ b/modules/core/src/main/resources/META-INF/log4j.properties
@@ -31,5 +31,5 @@ log4j.category.net.htmlparser=WARN
 log4j.category.org.apache.catalina=FATAL
 log4j.category.com.ibm=WARN
 
-log4j.category.ikube=INFO
+log4j.category.ikube=DEBUG
 log4j.category.ikube.toolkit=INFO
