--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,17 @@
 		<delete dir="${tomcat.3.webapps}/${ikube.dir}" failonerror="true" />
 		<delete dir="${tomcat.4.webapps}/${ikube.dir}" failonerror="true" />
 
+		<delete dir="D:/Cluster/faq" failonerror="true" />
+
+		<delete dir="${tomcat.1.bin}/faq" failonerror="true" />
+		<delete dir="${tomcat.2.bin}/faq" failonerror="true" />
+		<delete dir="${tomcat.3.bin}/faq" failonerror="true" />
+
+		<delete file="${tomcat.1.webapps}/${ikube.war}" failonerror="true" />
+		<delete file="${tomcat.2.webapps}/${ikube.war}" failonerror="true" />
+		<delete file="${tomcat.3.webapps}/${ikube.war}" failonerror="true" />
+		<delete file="${tomcat.4.webapps}/${ikube.war}" failonerror="true" />
+
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="true" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="true" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="true" />
