--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -1,6 +1,6 @@
 #Configuration details for individual instances
 delay=10000
-period=180000
+period=60000
 max.age=36000000
 
 dead.lock.delay=3600000
@@ -29,7 +29,7 @@ merge.factor=100000
 buffered.docs=100000
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=./faqIndex
+index.directory.path=./faq
 
 #General JDBC settings
 jdbc.minPoolSize=1
@@ -44,10 +44,10 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://jackal:50000/isearch
-jdbc.database=isearch
+jdbc.url=jdbc:db2://isearch:50000/ten
+jdbc.database=ten
 jdbc.port=50000
-jdbc.server=jackal
+jdbc.server=isearch
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
