--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -1,7 +1,7 @@
 #Configuration details for individual instances
-delay=10000
-period=60000
-max.age=36000000
+delay=3000
+period=10000
+max.age=60000
 
 dead.lock.delay=3600000
 dead.lock.period=3600000
@@ -18,7 +18,7 @@ report.period=180000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.batch.size=100000
+jdbc.batch.size=10
 
 buffer.size=512
 compound.file=true
@@ -41,9 +41,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://isearch:50000/ten
-jdbc.database=ten
+jdbc.url=jdbc:db2://jackal:50000/isearch
+jdbc.database=isearch
 jdbc.port=50000
-jdbc.server=isearch
+jdbc.server=jackal
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
