git-svn-id: http://ikube.googlecode.com/svn/trunk@56 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -1,7 +1,10 @@
 #Configuration details for individual instances
 delay=3000
 period=10000
-max.age=60000
+max.age=30000
+
+lock.manager.delay=1000
+lock.manager.period=500
 
 dead.lock.delay=3600000
 dead.lock.period=3600000
