--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -3,6 +3,9 @@ delay=120000
 period=180000
 max.age=36000000
 
+lock.manager.delay=1000
+lock.manager.period=500
+
 dead.lock.delay=3600000
 dead.lock.period=3600000
 
@@ -15,7 +18,7 @@ web.service.period=3600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.batch.size=100000
+jdbc.batch.size=10
 
 buffer.size=512
 compound.file=true
