git-svn-id: http://ikube.googlecode.com/svn/trunk@60 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/log4j.properties
+++ b/modules/core/src/main/resources/META-INF/log4j.properties
@@ -32,4 +32,5 @@ log4j.category.org.apache.catalina=FATAL
 log4j.category.com.ibm=WARN
 
 log4j.category.ikube=DEBUG
+log4j.category.ikube.cluster=INFO
 log4j.category.ikube.toolkit=INFO
