--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -1,10 +1,10 @@
 #Configuration details for individual instances
-delay=120000
-period=180000
+delay=600000
+period=600000
 max.age=36000000
 
-lock.manager.delay=1000
-lock.manager.period=500
+lock.manager.delay=100
+lock.manager.period=100
 
 dead.lock.delay=3600000
 dead.lock.period=3600000
@@ -26,7 +26,7 @@ merge.factor=100000
 buffered.docs=100000
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=./faqIndex
+index.directory.path=./faq
 
 #General JDBC settings
 jdbc.minPoolSize=1
