--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -1,6 +1,6 @@
 #Configuration details for individual instances
-delay=3000
-period=3000
+delay=10000
+period=10000
 max.age=20000
 
 lock.manager.delay=1000
@@ -21,7 +21,7 @@ report.period=180000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.batch.size=10
+jdbc.batch.size=10000
 
 buffer.size=512
 compound.file=true
@@ -44,9 +44,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://jackal:50000/isearch
-jdbc.database=isearch
+jdbc.url=jdbc:db2://isearch:50000/ten
+jdbc.database=ten
 jdbc.port=50000
-jdbc.server=jackal
+jdbc.server=isearch
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
