--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -1,13 +1,10 @@
 #Configuration details for individual instances
 delay=10000
-period=10000
-max.age=20000
+period=60000
+max.age=36000000
 
 lock.manager.delay=1000
-lock.manager.period=500
-
-dead.lock.delay=3600000
-dead.lock.period=3600000
+lock.manager.period=100
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
@@ -15,19 +12,19 @@ dead.lock.period=3600000
 web.service.delay=3600000
 web.service.period=3600000
 
-report.delay=180000
-report.period=180000
+report.delay=600000
+report.period=600000
 
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.batch.size=10000
-
+jdbc.batch.size=300000
+	
 buffer.size=512
 compound.file=true
-merge.factor=1000
-buffered.docs=1000
-max.field.length=10000
+merge.factor=100000
+buffered.docs=100000
+max.field.length=100000
 max.read.length=10000000
 index.directory.path=./faq
 
@@ -44,8 +41,8 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://isearch:50000/ten
-jdbc.database=ten
+jdbc.url=jdbc:db2://isearch:50000/hundred
+jdbc.database=hundred
 jdbc.port=50000
 jdbc.server=isearch
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
