--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -1,5 +1,5 @@
 #Configuration details for individual instances
-delay=10000
+delay=3000
 period=60000
 max.age=36000000
 
@@ -19,7 +19,7 @@ profiling.delay=3600000
 profiling.period=3600000
 
 jdbc.batch.size=300000
-	
+
 buffer.size=512
 compound.file=true
 merge.factor=100000
@@ -41,9 +41,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://isearch:50000/hundred
-jdbc.database=hundred
+jdbc.url=jdbc:db2://jackal:50000/isearch
+jdbc.database=isearch
 jdbc.port=50000
-jdbc.server=isearch
+jdbc.server=jackal
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
