--- a/modules/core/src/test/resources/data/spring.properties
+++ b/modules/core/src/test/resources/data/spring.properties
@@ -11,8 +11,8 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://isearch:50000/million
-jdbc.database=million
+jdbc.url=jdbc:db2://isearch:50000/billion
+jdbc.database=billion
 jdbc.port=50000
 jdbc.server=isearch
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
