--- a/modules/core/src/test/resources/data/spring.properties
+++ b/modules/core/src/test/resources/data/spring.properties
@@ -11,9 +11,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://isearch:50000/billion
-jdbc.database=billion
+jdbc.url=jdbc:db2://jackal:50000/isearch
+jdbc.database=isearch
 jdbc.port=50000
-jdbc.server=isearch
+jdbc.server=jackal
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
