git-svn-id: http://ikube.googlecode.com/svn/trunk@80 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -20,6 +20,8 @@ profiling.period=3600000
 
 jdbc.batch.size=10
 
+files.path=./modules/core/src/test/resources/data
+
 buffer.size=512
 compound.file=true
 merge.factor=100000
