--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -51,14 +51,14 @@
 					</archive>
 				</configuration>
 			</plugin>
-			<!--<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<forkMode>once</forkMode>
 					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
 				</configuration>
-			</plugin>-->
+			</plugin>
 		</plugins>
 	</build>
 
