--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -4,7 +4,7 @@ period=60000
 max.age=36000000
 
 lock.manager.delay=1000
-lock.manager.period=100
+lock.manager.period=250
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
@@ -18,14 +18,14 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.batch.size=300000
+jdbc.batch.size=100000
 
 buffer.size=512
 compound.file=true
-merge.factor=100000
-buffered.docs=100000
+merge.factor=10000
+buffered.docs=10000
 max.field.length=100000
-max.read.length=10000000
+max.read.length=1000000
 index.directory.path=./faq
 
 #General JDBC settings
@@ -41,9 +41,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://jackal:50000/isearch
-jdbc.database=isearch
+jdbc.url=jdbc:db2://isearch:50000/billion
+jdbc.database=billion
 jdbc.port=50000
-jdbc.server=jackal
+jdbc.server=isearch
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
