--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -18,7 +18,8 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.batch.size=100000
+jdbc.fetch.size=100
+jdbc.batch.size=1000
 
 buffer.size=512
 compound.file=true
@@ -29,11 +30,11 @@ max.read.length=1000000
 index.directory.path=./faq
 
 #General JDBC settings
-jdbc.minPoolSize=1
-jdbc.maxPoolSize=10
+jdbc.minPoolSize=10
+jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
-jdbc.numHelperThreads=3
+jdbc.numHelperThreads=10
 
 #DB2 database
 jdbc.name=DB2
@@ -41,9 +42,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://isearch:50000/billion
-jdbc.database=billion
+jdbc.url=jdbc:db2://jackal:50000/isearch
+jdbc.database=isearch
 jdbc.port=50000
-jdbc.server=isearch
+jdbc.server=jackal
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
