git-svn-id: http://ikube.googlecode.com/svn/trunk@84 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -18,7 +18,8 @@ web.service.period=3600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.batch.size=10
+jdbc.fetch.size=10
+jdbc.batch.size=15
 
 files.path=./modules/core/src/test/resources/data
 
