--- a/pom.xml
+++ b/pom.xml
@@ -466,21 +466,21 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>com.adobe.pdf</groupId>
 			<artifactId>pcfi</artifactId>
 			<version>2010.08.09</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
-			<groupId>org.apache</groupId>
+			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
 			<version>1.3.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.apache</groupId>
 			<artifactId>jempbox</artifactId>
 			<version>1.3.1</version>
@@ -493,7 +493,7 @@
 			<version>1.3.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
+		</dependency>-->
 		<!--
 			<dependency> <groupId>oracle.ojdbc6</groupId> <artifactId>ojdbc6</artifactId> <version>11</version> <type>jar</type> <scope>compile</scope>
 			</dependency>
