--- a/modules/core/src/test/resources/data/spring.properties
+++ b/modules/core/src/test/resources/data/spring.properties
@@ -5,15 +5,30 @@ jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=3
 
+#H2 database
+#jdbc.user=sa
+#jdbc.password=
+#jdbc.name=H2
+#jdbc.driver=org.h2.Driver
+#jdbc.driver.type=4
+#jdbc.dataSource=org.h2.jdbcx.JdbcDataSource
+#jdbc.url=jdbc:h2:tcp://isearch:9092/~/test;LOG=0;DB_CLOSE_ON_EXIT=TRUE;CACHE_SIZE=65536;LOCK_MODE=0;UNDO_LOG=0
+#jdbc.database=test
+#jdbc.server=isearch
+#jdbc.port=9092
+#jdbc:h2:mem:search;DB_CLOSE_ON_EXIT=FALSE
+#jdbc:h2:tcp://localhost/~/test;DB_CLOSE_ON_EXIT=FALSE
+#jdbc:h2:tcp://falcon:9092/~/test;DB_CLOSE_ON_EXIT=FALSE
+
 #DB2 database
 jdbc.name=DB2
 jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://jackal:50000/isearch
-jdbc.database=isearch
+jdbc.url=jdbc:db2://isearch:50000/billion
+jdbc.database=billion
 jdbc.port=50000
-jdbc.server=jackal
+jdbc.server=isearch
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
