git-svn-id: http://ikube.googlecode.com/svn/trunk@92 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -56,7 +56,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<forkMode>once</forkMode>
-					<argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine>
+					<!-- argLine>-javaagent:../../serenity/serenity.jar -Xms512m -Xmx1024m ${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</argLine -->
 				</configuration>
 			</plugin>
 		</plugins>
