--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -4,7 +4,7 @@ period=60000
 max.age=36000000
 
 lock.manager.delay=1000
-lock.manager.period=250
+lock.manager.period=60000
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
@@ -18,8 +18,8 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.fetch.size=10000
-jdbc.batch.size=100000
+jdbc.fetch.size=1000
+jdbc.batch.size=1000
 
 buffer.size=512
 compound.file=true
@@ -30,11 +30,24 @@ max.read.length=1000000
 index.directory.path=./faq
 
 #General JDBC settings
-jdbc.minPoolSize=10
-jdbc.maxPoolSize=100
+jdbc.minPoolSize=3
+jdbc.maxPoolSize=10
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
-jdbc.numHelperThreads=10
+jdbc.numHelperThreads=1
+
+#DB2 database
+jdbc.name=DB2
+jdbc.driver.type=4
+jdbc.user=db2admin
+jdbc.password=db2admin
+jdbc.schema=db2admin
+jdbc.url=jdbc:db2://localhost:50000/billion
+jdbc.database=billion
+jdbc.port=50000
+jdbc.server=localhost
+jdbc.driver=com.ibm.db2.jcc.DB2Driver
+jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
 #H2 database
 #jdbc.user=sa
@@ -50,16 +63,3 @@ jdbc.numHelperThreads=10
 #jdbc:h2:mem:search;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:tcp://localhost/~/test;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:tcp://falcon:9092/~/test;DB_CLOSE_ON_EXIT=FALSE
-
-#DB2 database
-jdbc.name=DB2
-jdbc.driver.type=4
-jdbc.user=db2admin
-jdbc.password=db2admin
-jdbc.schema=db2admin
-jdbc.url=jdbc:db2://isearch:50000/billion
-jdbc.database=billion
-jdbc.port=50000
-jdbc.server=isearch
-jdbc.driver=com.ibm.db2.jcc.DB2Driver
-jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
