git-svn-id: http://ikube.googlecode.com/svn/trunk@94 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/log4j.properties
+++ b/modules/core/src/main/resources/META-INF/log4j.properties
@@ -1,6 +1,6 @@
 # Root Logger
-log4j.rootLogger=DEBUG, ikube, file
-log4j.rootCategory=DEBUG, ikube
+log4j.rootLogger=INFO, ikube, file
+log4j.rootCategory=INFO, ikube
 
 # ikube application file logging
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
@@ -23,13 +23,10 @@ log4j.category.net=WARN
 log4j.category.com=WARN
 log4j.category.org=WARN
 log4j.category.org.springframework=WARN
-log4j.category.org.hibernate=WARN
-log4j.category.bitronix=WARN
-log4j.category.bitronix.tm.twopc=ERROR
-log4j.category.bitronix.tm.recovery=WARN
 log4j.category.net.htmlparser=WARN
-log4j.category.org.apache.catalina=FATAL
+# log4j.category.org.apache.catalina=FATAL
 log4j.category.com.ibm=WARN
+# log4j.category.org.apache=WARN
 
 log4j.category.ikube=DEBUG
 log4j.category.ikube.cluster=INFO
