git-svn-id: http://ikube.googlecode.com/svn/trunk@99 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -44,10 +44,10 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://isearch:50000/ten
-jdbc.database=ten
+jdbc.url=jdbc:db2://ikube:50000/ikube
+jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=isearch
+jdbc.server=ikube
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
