git-svn-id: http://ikube.googlecode.com/svn/trunk@106 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/handler/spring.properties
+++ b/modules/core/src/test/resources/handler/spring.properties
@@ -4,7 +4,7 @@ period=600000
 max.age=36000000
 
 lock.manager.delay=1000
-lock.manager.period=1000
+lock.manager.period=100
 
 dead.lock.delay=3600000
 dead.lock.period=3600000
@@ -18,8 +18,8 @@ web.service.period=3600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.fetch.size=10
-jdbc.batch.size=15
+jdbc.fetch.size=100
+jdbc.batch.size=1000
 
 files.path=./modules/core/src/test/resources/data
 
@@ -32,7 +32,7 @@ max.read.length=10000000
 index.directory.path=./faq
 
 #General JDBC settings
-jdbc.minPoolSize=1
+jdbc.minPoolSize=3
 jdbc.maxPoolSize=10
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
@@ -44,9 +44,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://jackal:50000/isearch
-jdbc.database=isearch
+jdbc.url=jdbc:db2://ikube:50000/ikube
+jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=jackal
+jdbc.server=ikube
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
