--- a/modules/core/src/test/resources/handler/spring.properties
+++ b/modules/core/src/test/resources/handler/spring.properties
@@ -18,15 +18,17 @@ web.service.period=3600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.fetch.size=100
-jdbc.batch.size=1000
+jdbc.fetch.size=10
+jdbc.batch.size=10
+
+faq.predicate=where faq.faqid > 0 and faq.faqid < 10000
 
 files.path=./modules/core/src/test/resources/data
 
 buffer.size=512
 compound.file=true
-merge.factor=10
-buffered.docs=10
+merge.factor=1000
+buffered.docs=1000
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=./faq
