git-svn-id: http://ikube.googlecode.com/svn/trunk@109 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/handler/spring.properties
+++ b/modules/core/src/test/resources/handler/spring.properties
@@ -21,14 +21,14 @@ profiling.period=3600000
 jdbc.fetch.size=10
 jdbc.batch.size=10
 
-faq.predicate=where faq.faqid > 0 and faq.faqid < 10000
+faq.predicate=where faq.faqid > 0
 
 files.path=./modules/core/src/test/resources/data
 
 buffer.size=512
 compound.file=true
-merge.factor=1000
-buffered.docs=1000
+merge.factor=10
+buffered.docs=10
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=./faq
@@ -46,9 +46,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/ikube
+jdbc.url=jdbc:db2://localhost:50000/ikube
 jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=ikube
+jdbc.server=localhost
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
