--- a/modules/core/src/test/resources/handler/spring.properties
+++ b/modules/core/src/test/resources/handler/spring.properties
@@ -25,7 +25,7 @@ faq.predicate=where faq.faqid > 0
 
 files.path=./modules/core/src/test/resources/data
 
-buffer.size=512
+buffer.size=128
 compound.file=true
 merge.factor=10
 buffered.docs=10
@@ -46,9 +46,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.url=jdbc:db2://ikube:50000/ikube
 jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=localhost
+jdbc.server=ikube
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
