--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -19,24 +19,24 @@ profiling.delay=180000
 profiling.period=180000
 
 lock.manager.delay=5000
-lock.manager.period=250
+lock.manager.period=100
 
-jdbc.batch.size=100000
+jdbc.batch.size=1000
 
-buffer.size=512
+buffer.size=256
 compound.file=true
-merge.factor=100000
-buffered.docs=100000
+merge.factor=1000
+buffered.docs=1000
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=./faq
+index.directory.path=./index
 
 #General JDBC settings
-jdbc.minPoolSize=1
-jdbc.maxPoolSize=10
+jdbc.minPoolSize=10
+jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
-jdbc.numHelperThreads=3
+jdbc.numHelperThreads=5
 
 #DB2 database
 jdbc.name=DB2
