--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -4,7 +4,7 @@ period=600000
 max.age=36000000
 
 lock.manager.delay=1000
-lock.manager.period=1000
+lock.manager.period=100
 
 dead.lock.delay=3600000
 dead.lock.period=3600000
@@ -19,22 +19,24 @@ profiling.delay=3600000
 profiling.period=3600000
 
 jdbc.fetch.size=10
-jdbc.batch.size=15
+jdbc.batch.size=10
 
 files.path=./modules/core/src/test/resources/data
 
-buffer.size=512
+faq.predicate=where faq.faqid > 0
+
+buffer.size=128
 compound.file=true
-merge.factor=100000
-buffered.docs=100000
+merge.factor=10
+buffered.docs=10
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=./faq
+index.directory.path=./index
 
 #General JDBC settings
-jdbc.minPoolSize=1
-jdbc.maxPoolSize=10
-jdbc.maxStatements=1000
+jdbc.minPoolSize=3
+jdbc.maxPoolSize=25
+jdbc.maxStatements=100
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=3
 
