git-svn-id: http://ikube.googlecode.com/svn/trunk@114 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/log4j.properties
+++ b/modules/core/src/main/resources/META-INF/log4j.properties
@@ -16,7 +16,7 @@ log4j.appender.ikube=org.apache.log4j.ConsoleAppender
 log4j.appender.ikube.Threshold=DEBUG
 log4j.appender.ikube.ImmediateFlush=true
 log4j.appender.ikube.layout=org.apache.log4j.PatternLayout
-log4j.appender.ikube.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
+# log4j.appender.ikube.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 
 # set the categories
 log4j.category.net=WARN
