--- a/modules/core/src/test/resources/handler/spring.properties
+++ b/modules/core/src/test/resources/handler/spring.properties
@@ -3,8 +3,8 @@ delay=600000
 period=600000
 max.age=36000000
 
-lock.manager.delay=1000
-lock.manager.period=100
+lock.manager.delay=10000
+lock.manager.period=10000
 
 dead.lock.delay=3600000
 dead.lock.period=3600000
@@ -18,8 +18,8 @@ web.service.period=3600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.fetch.size=10
-jdbc.batch.size=10
+jdbc.fetch.size=100
+jdbc.batch.size=100
 
 faq.predicate=where faq.faqid > 0
 
@@ -27,8 +27,8 @@ files.path=./modules/core/src/test/resources/data
 
 buffer.size=128
 compound.file=true
-merge.factor=10
-buffered.docs=10
+merge.factor=100
+buffered.docs=100
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=./faq
@@ -46,9 +46,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/ikube
+jdbc.url=jdbc:db2://localhost:50000/ikube
 jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=ikube
+jdbc.server=localhost
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
