git-svn-id: http://ikube.googlecode.com/svn/trunk@115 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -4,7 +4,7 @@ period=60000
 max.age=36000000
 
 lock.manager.delay=1000
-lock.manager.period=60000
+lock.manager.period=1000
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
@@ -18,16 +18,33 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.fetch.size=1000
-jdbc.batch.size=10000
+property=100
 
-buffer.size=512
+jdbc.fetch.size=${property}
+jdbc.batch.size=${property}
+
+files.path=./
+faq.predicate=where faq.faqid > 0
+# attachment.predicate=where name = 'xml.xml'
+# attachment.predicate=where name = 'txt.txt'
+# attachment.predicate=where name = 'html.html'
+# attachment.predicate=where name = 'rtf.rtf'
+# attachment.predicate=where name = 'xls.xls'
+
+attachment.predicate=where name != 'doc.doc' and name != 'pdf.pdf'
+
+# Memory leak
+# attachment.predicate=where name = 'doc.doc'
+# Slow memory leak
+# attachment.predicate=where name = 'pdf.pdf'
+
+buffer.size=256
 compound.file=true
-merge.factor=10000
-buffered.docs=10000
+merge.factor=${property}
+buffered.docs=${property}
 max.field.length=100000
 max.read.length=1000000
-index.directory.path=./faq
+index.directory.path=./index
 
 #General JDBC settings
 jdbc.minPoolSize=3
@@ -42,10 +59,10 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/ikube
+jdbc.url=jdbc:db2://localhost:50000/ikube
 jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=ikube
+jdbc.server=localhost
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
