git-svn-id: http://ikube.googlecode.com/svn/trunk@116 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -18,7 +18,7 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-property=100
+property=10000
 
 jdbc.fetch.size=${property}
 jdbc.batch.size=${property}
@@ -31,7 +31,10 @@ faq.predicate=where faq.faqid > 0
 # attachment.predicate=where name = 'rtf.rtf'
 # attachment.predicate=where name = 'xls.xls'
 
-attachment.predicate=where name != 'doc.doc' and name != 'pdf.pdf'
+attachment.predicate=where name = 'txt.txt'
+# name = 'xml.xml' or name = 'txt.txt' or name = 'html.html' or
+
+# attachment.predicate=where name != 'doc.doc' and name != 'pdf.pdf'
 
 # Memory leak
 # attachment.predicate=where name = 'doc.doc'
