git-svn-id: http://ikube.googlecode.com/svn/trunk@123 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/handler/spring.properties
+++ b/modules/core/src/test/resources/handler/spring.properties
@@ -31,7 +31,7 @@ merge.factor=100
 buffered.docs=100
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=./faq
+index.directory.path=./index
 
 #General JDBC settings
 jdbc.minPoolSize=3
