git-svn-id: http://ikube.googlecode.com/svn/trunk@125 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/handler/spring.properties
+++ b/modules/core/src/test/resources/handler/spring.properties
@@ -22,6 +22,7 @@ jdbc.fetch.size=100
 jdbc.batch.size=100
 
 faq.predicate=where faq.faqid > 0
+attachment.predicate=where name != 'pdf.pdf' and name != 'rtf.rtf'
 
 files.path=./modules/core/src/test/resources/data
 
