--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -18,7 +18,7 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-property=10000
+property=1000
 
 jdbc.fetch.size=${property}
 jdbc.batch.size=${property}
@@ -50,11 +50,11 @@ max.read.length=1000000
 index.directory.path=./index
 
 #General JDBC settings
-jdbc.minPoolSize=3
-jdbc.maxPoolSize=10
+jdbc.minPoolSize=10
+jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
-jdbc.numHelperThreads=1
+jdbc.numHelperThreads=5
 
 #DB2 database
 jdbc.name=DB2
@@ -62,10 +62,10 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.url=jdbc:db2://ikube:50000/ikube
 jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=localhost
+jdbc.server=ikube
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
 
