git-svn-id: http://ikube.googlecode.com/svn/trunk@126 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -18,10 +18,10 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-property=1000
+property=10
 
-jdbc.fetch.size=${property}
-jdbc.batch.size=${property}
+jdbc.fetch.size=10
+jdbc.batch.size=1000
 
 files.path=./
 faq.predicate=where faq.faqid > 0
@@ -43,8 +43,8 @@ attachment.predicate=where name = 'txt.txt'
 
 buffer.size=256
 compound.file=true
-merge.factor=${property}
-buffered.docs=${property}
+merge.factor=100
+buffered.docs=100
 max.field.length=100000
 max.read.length=1000000
 index.directory.path=./index
