git-svn-id: http://ikube.googlecode.com/svn/trunk@127 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -18,28 +18,13 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-property=10
-
-jdbc.fetch.size=10
 jdbc.batch.size=1000
+
+table.handler.threads=3
 
 files.path=./
 faq.predicate=where faq.faqid > 0
-# attachment.predicate=where name = 'xml.xml'
-# attachment.predicate=where name = 'txt.txt'
-# attachment.predicate=where name = 'html.html'
-# attachment.predicate=where name = 'rtf.rtf'
-# attachment.predicate=where name = 'xls.xls'
-
-attachment.predicate=where name = 'txt.txt'
-# name = 'xml.xml' or name = 'txt.txt' or name = 'html.html' or
-
-# attachment.predicate=where name != 'doc.doc' and name != 'pdf.pdf'
-
-# Memory leak
-# attachment.predicate=where name = 'doc.doc'
-# Slow memory leak
-# attachment.predicate=where name = 'pdf.pdf'
+attachment.predicate=where name != 'xml.xml'
 
 buffer.size=256
 compound.file=true
@@ -62,24 +47,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/ikube
-jdbc.database=ikube
+jdbc.url=jdbc:db2://ikube:50000/billion
+jdbc.database=billion
 jdbc.port=50000
 jdbc.server=ikube
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
-
-#H2 database
-#jdbc.user=sa
-#jdbc.password=
-#jdbc.name=H2
-#jdbc.driver=org.h2.Driver
-#jdbc.driver.type=4
-#jdbc.dataSource=org.h2.jdbcx.JdbcDataSource
-#jdbc.url=jdbc:h2:tcp://isearch:9092/~/test;LOG=0;DB_CLOSE_ON_EXIT=TRUE;CACHE_SIZE=65536;LOCK_MODE=0;UNDO_LOG=0
-#jdbc.database=test
-#jdbc.server=isearch
-#jdbc.port=9092
-#jdbc:h2:mem:search;DB_CLOSE_ON_EXIT=FALSE
-#jdbc:h2:tcp://localhost/~/test;DB_CLOSE_ON_EXIT=FALSE
-#jdbc:h2:tcp://falcon:9092/~/test;DB_CLOSE_ON_EXIT=FALSE
