--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -18,8 +18,9 @@ web.service.period=3600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.fetch.size=10
 jdbc.batch.size=10
+
+table.handler.threads=3
 
 files.path=./modules/core/src/test/resources/data
 
