git-svn-id: http://ikube.googlecode.com/svn/trunk@128 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -18,18 +18,16 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.batch.size=1000
+jdbc.batch.size=10
 
 table.handler.threads=3
 
-files.path=./
-faq.predicate=where faq.faqid > 0
-attachment.predicate=where name != 'xml.xml'
+files.path=./modules/core/src/test/resources/data
 
-buffer.size=256
+buffer.size=128
 compound.file=true
-merge.factor=100
-buffered.docs=100
+merge.factor=10
+buffered.docs=10
 max.field.length=100000
 max.read.length=1000000
 index.directory.path=./index
@@ -47,9 +45,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/billion
-jdbc.database=billion
+jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=ikube
+jdbc.server=localhost
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
