--- a/modules/core/src/test/resources/handler/spring.properties
+++ b/modules/core/src/test/resources/handler/spring.properties
@@ -18,8 +18,10 @@ web.service.period=3600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.fetch.size=100
-jdbc.batch.size=100
+jdbc.fetch.size=10
+jdbc.batch.size=10
+
+table.handler.threads=1
 
 faq.predicate=where faq.faqid > 0
 attachment.predicate=where name != 'pdf.pdf' and name != 'rtf.rtf'
@@ -28,8 +30,8 @@ files.path=./modules/core/src/test/resources/data
 
 buffer.size=128
 compound.file=true
-merge.factor=100
-buffered.docs=100
+merge.factor=10
+buffered.docs=10
 max.field.length=10000
 max.read.length=10000000
 index.directory.path=./index
