git-svn-id: http://ikube.googlecode.com/svn/trunk@129 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -21,6 +21,9 @@ profiling.period=3600000
 jdbc.batch.size=10
 
 table.handler.threads=3
+internet.handler.threads=3
+filesystem.handler.threads=1
+email.handler.threads=1
 
 files.path=./modules/core/src/test/resources/data
 
@@ -45,9 +48,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://localhost:50000/ikube
-jdbc.database=ikube
+jdbc.url=jdbc:db2://ikube:50000/billion
+jdbc.database=billion
 jdbc.port=50000
-jdbc.server=localhost
+jdbc.server=ikube
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
