--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -20,7 +20,10 @@ profiling.period=3600000
 
 jdbc.batch.size=10
 
-table.handler.threads=3
+table.handler.threads=1
+internet.handler.threads=3
+filesystem.handler.threads=1
+email.handler.threads=1
 
 files.path=./modules/core/src/test/resources/data
 
