--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -1,34 +1,52 @@
-#Configuration details for individual instances
-delay=10000
+# The delay before the scheduled tasks start executing
+delay=3000
+# The period between notifications for timed tasks
 period=60000
+# The maximum age of the indexes
 max.age=36000000
 
-dead.lock.delay=3600000
-dead.lock.period=3600000
+# The delay before the lock manager starts publishing events
+lock.manager.delay=1000
+# The period between events being fired
+lock.manager.period=1000
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
 #the search operations and clients
-web.service.delay=180000
-web.service.period=180000
+web.service.delay=10000
+web.service.period=10000
 
-report.delay=180000
-report.period=180000
+# The delay before the reporting gets dumped
+report.delay=600000
+# The period between reports
+report.period=600000
 
-profiling.delay=180000
-profiling.period=180000
+# The delay before the profiler dumps the report
+profiling.delay=3600000
+# The period between profile reports
+profiling.period=3600000
 
-lock.manager.delay=5000
-lock.manager.period=100
+# The batch size for fetching records from the database
+jdbc.batch.size=100
 
-jdbc.batch.size=1000
+# The number of threads for each indexing component
+table.handler.threads=5
+internet.handler.threads=1
+filesystem.handler.threads=1
+email.handler.threads=1
 
-buffer.size=256
+# The path to the files to be indexed
+files.path=./modules/core/src/test/resources/data
+
+# Lucene properties:
+buffer.size=128
 compound.file=true
-merge.factor=1000
-buffered.docs=1000
-max.field.length=10000
-max.read.length=10000000
+merge.factor=100
+buffered.docs=100
+max.field.length=100000
+max.read.length=1000000
+
+# The path for the index
 index.directory.path=./index
 
 #General JDBC settings
@@ -44,19 +62,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/ikube
-jdbc.database=ikube
+jdbc.url=jdbc:db2://ikube:50000/billion
+jdbc.database=billion
 jdbc.port=50000
 jdbc.server=ikube
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
-
-#Oracle database
-#jdbc.user=isearch
-#jdbc.password=isearch
-#jdbc.name=Oracle
-#jdbc.driver=oracle.jdbc.driver.OracleDriver
-#jdbc.dataSource=oracle.jdbc.xa.client.OracleXADataSource
-#jdbc.driver.type=4
-#jdbc.url=jdbc:oracle:thin:@//falcon:1521/oracle
-#jdbc:oracle:thin:@//localhost:1521/xe,
