--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,6 @@
 
 	<build>
 		<plugins>
-			<!--<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.4.3</version>
-				<configuration>
-					<encoding>UTF8</encoding>
-				</configuration>
-			</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -46,25 +38,6 @@
 					</compilerArguments>
 				</configuration>
 			</plugin>
-
-			<!-- Hangs. -->
-			<!--<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
-					<docletArtifact>
-						<groupId>gr.spinellis</groupId>
-						<artifactId>UmlGraph</artifactId>
-						<version>4.4</version>
-					</docletArtifact>
-					<additionalparam>
-						-inferrel -inferdep -quiet -hide java.* -collpackages java.util.* -qualify
-						-postfixpackage -nodefontsize 9
-						-nodefontpackagesize 7
-					</additionalparam>
-				</configuration>
-			</plugin>-->
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -96,41 +69,6 @@
 	</build>
 
 	<dependencies>
-		<!--<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>jasper-jdt</artifactId>
-			<version>6.0.29</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-core</artifactId>
-			<version>7.0.0</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-jasper</artifactId>
-			<version>7.0.0</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat.extras</groupId>
-			<artifactId>juli-adapters</artifactId>
-			<version>6.0.29</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-util</artifactId>
-			<version>7.0.0</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>-->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>jsp-api</artifactId>
@@ -163,26 +101,6 @@
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		<!--<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>-->
-		<!--<dependency>
-			<groupId>org.apache.tiles</groupId>
-			<artifactId>com.springsource.org.apache.tiles</artifactId>
-			<version>${tiles.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tiles</groupId>
-			<artifactId>com.springsource.org.apache.tiles.core</artifactId>
-			<version>${tiles.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tiles</groupId>
-			<artifactId>com.springsource.org.apache.tiles.jsp</artifactId>
-			<version>${tiles.version}</version>
-		</dependency>-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -500,52 +418,34 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<!--<dependency>
-			<groupId>com.adobe.pdf</groupId>
-			<artifactId>pcfi</artifactId>
-			<version>2010.08.09</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>-->
-		<!--<dependency>
-			<groupId>org.apache</groupId>
-			<artifactId>jempbox</artifactId>
-			<version>1.3.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache</groupId>
-			<artifactId>fontbox</artifactId>
-			<version>1.3.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>-->
 		<!--
 			<dependency> <groupId>oracle.ojdbc6</groupId> <artifactId>ojdbc6</artifactId> <version>11</version> <type>jar</type> <scope>compile</scope>
 			</dependency>
 		-->
-		<!--<dependency>
-			<groupId>org.apache.openejb</groupId>
-			<artifactId>openejb-jee</artifactId>
-			<version>3.1.2</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>-->
-		<!--<dependency>
-			<groupId>aspose</groupId>
-			<artifactId>aspose-pdf-jdk16</artifactId>
-			<version>2.7.0</version>
-			<type>jar</type>
+		<dependency>
+			<groupId>org.apache.jcs</groupId>
+			<artifactId>jcs</artifactId>
+			<version>1.3</version>
+			<type>pom</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>aspose</groupId>
-			<artifactId>aspose-pdf-kit</artifactId>
-			<version>3.5.0</version>
+			<groupId>jcs</groupId>
+			<artifactId>jcs</artifactId>
+			<version>1.3</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>-->
+			<exclusions>
+				<exclusion>
+					<artifactId>xerces</artifactId>
+					<groupId>xerces</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>xerces</artifactId>
+					<groupId>xercesImpl</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 
 	<repositories>
