git-svn-id: http://ikube.googlecode.com/svn/trunk@139 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -9,11 +9,14 @@ cluster.directory=D:/Cluster
 tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
 tomcat.2=${cluster.directory}/apache-tomcat-6.0.29-2
 tomcat.3=${cluster.directory}/apache-tomcat-6.0.29-3
+tomcat.ikube=Z:\apache-tomcat-6.0.26
 
 tomcat.1.webapps=${tomcat.1}/webapps
 tomcat.2.webapps=${tomcat.2}/webapps
 tomcat.3.webapps=${tomcat.3}/webapps
+tomcat.ikube.webapps=${tomcat.ikube}/webapps
 
 tomcat.1.bin=${tomcat.1}/bin
 tomcat.2.bin=${tomcat.2}/bin
 tomcat.3.bin=${tomcat.3}/bin
+tomcat.ikube.bin=${tomcat.ikube}/bin
