git-svn-id: http://ikube.googlecode.com/svn/trunk@146 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -18,10 +18,12 @@ web.service.period=3600000
 profiling.delay=3600000
 profiling.period=3600000
 
+throttle=250
+
 jdbc.batch.size=10
 
 table.handler.threads=1
-internet.handler.threads=10
+internet.handler.threads=3
 filesystem.handler.threads=1
 email.handler.threads=1
 
