--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -1,7 +1,7 @@
 #Configuration details for individual instances
 delay=3000
 period=60000
-max.age=36000000
+max.age=300000
 
 lock.manager.delay=1000
 lock.manager.period=1000
@@ -18,10 +18,10 @@ report.period=600000
 profiling.delay=3600000
 profiling.period=3600000
 
-jdbc.batch.size=100
+jdbc.batch.size=1000
 
-table.handler.threads=3
-internet.handler.threads=3
+table.handler.threads=1
+internet.handler.threads=5
 filesystem.handler.threads=1
 email.handler.threads=1
 
@@ -29,8 +29,8 @@ files.path=./modules/core/src/test/resources/data
 
 buffer.size=128
 compound.file=true
-merge.factor=100
-buffered.docs=100
+merge.factor=1000
+buffered.docs=1000
 max.field.length=100000
 max.read.length=1000000
 index.directory.path=./index
@@ -48,9 +48,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/billion
-jdbc.database=billion
+jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=ikube
+jdbc.server=localhost
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
