--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -53,9 +53,9 @@ jdbc.name=H2
 jdbc.driver=org.h2.Driver
 jdbc.driver.type=4
 jdbc.dataSource=org.h2.jdbcx.JdbcDataSource
-jdbc.url=jdbc:h2:mem:search;DB_CLOSE_ON_EXIT=FALSE
-jdbc.database=test
-jdbc.server=jackal
+jdbc.url=jdbc:h2:mem:database;DB_CLOSE_ON_EXIT=FALSE
+jdbc.database=database
+jdbc.server=localhost
 jdbc.port=9092
 #jdbc:h2:mem:search;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:tcp://localhost/~/test;DB_CLOSE_ON_EXIT=FALSE
