--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -1,7 +1,7 @@
 #Configuration details for individual instances
 delay=3000
 period=60000
-max.age=300000
+max.age=3600000
 
 lock.manager.delay=1000
 lock.manager.period=1000
@@ -20,7 +20,7 @@ profiling.period=3600000
 
 jdbc.batch.size=1000
 
-table.handler.threads=1
+table.handler.threads=3
 internet.handler.threads=5
 filesystem.handler.threads=1
 email.handler.threads=1
