git-svn-id: http://ikube.googlecode.com/svn/trunk@153 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -20,6 +20,10 @@ profiling.period=3600000
 
 jdbc.batch.size=1000
 
+throttle=100
+
+url=http://www.ikokoon.eu/ikokoon/index.html
+
 table.handler.threads=3
 internet.handler.threads=5
 filesystem.handler.threads=1
