--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -20,6 +20,8 @@ profiling.period=3600000
 
 throttle=250
 
+url=http://www.ikokoon.eu/ikokoon/index.html
+
 jdbc.batch.size=10
 
 table.handler.threads=1
