--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -20,6 +20,8 @@ profiling.period=3600000
 
 jdbc.batch.size=1000
 
+faq.predicate=where faq.faqid > 0
+
 throttle=100
 
 url=http://www.ikokoon.eu/ikokoon/index.html
