git-svn-id: http://ikube.googlecode.com/svn/trunk@155 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -4,7 +4,7 @@ project.version=1.0
 
 target.directory=modules/war/target
 
-cluster.directory=D:/Cluster
+cluster.directory=D:/cluster
 
 tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
 tomcat.2=${cluster.directory}/apache-tomcat-6.0.29-2
