--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -30,19 +30,22 @@ profiling.period=3600000
 jdbc.batch.size=100
 
 # The number of threads for each indexing component
-table.handler.threads=5
-internet.handler.threads=5
+table.handler.threads=1
+internet.handler.threads=1
 filesystem.handler.threads=1
 email.handler.threads=1
 
 # The path to the files to be indexed
 files.path=./modules/core/src/test/resources/data
 
+# The first seed url for internet crawling
+url=http://www.ikokoon.eu/ikokoon/index.html
+
 # Lucene properties:
 buffer.size=128
 compound.file=true
-merge.factor=100
-buffered.docs=100
+merge.factor=10
+buffered.docs=10
 max.field.length=100000
 max.read.length=1000000
 
@@ -62,9 +65,9 @@ jdbc.driver.type=4
 jdbc.user=db2admin
 jdbc.password=db2admin
 jdbc.schema=db2admin
-jdbc.url=jdbc:db2://ikube:50000/billion
-jdbc.database=billion
+jdbc.url=jdbc:db2://localhost:50000/ikube
+jdbc.database=ikube
 jdbc.port=50000
-jdbc.server=ikube
+jdbc.server=localhost
 jdbc.driver=com.ibm.db2.jcc.DB2Driver
 jdbc.dataSource=com.ibm.db2.jcc.DB2XADataSource
