git-svn-id: http://ikube.googlecode.com/svn/trunk@156 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/log4j.properties
+++ b/modules/core/src/main/resources/META-INF/log4j.properties
@@ -28,6 +28,10 @@ log4j.category.net.htmlparser=WARN
 log4j.category.com.ibm=WARN
 # log4j.category.org.apache=WARN
 
+log4j.category.org.apache.jcs=INFO
+log4j.category.org.apache.jcs.auxiliary.remote=DEBUG
+log4j.category.org.apache.jcs.auxiliary.lateral=DEBUG
+
 log4j.category.ikube=DEBUG
 log4j.category.ikube.cluster=INFO
 log4j.category.ikube.toolkit=INFO
