--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -38,8 +38,10 @@ email.handler.threads=1
 # The path to the files to be indexed
 files.path=./modules/core/src/test/resources/data
 
+# The time delay between reads in the crawler
+throttle=1000
 # The first seed url for internet crawling
-url=http://www.ikokoon.eu/ikokoon/index.html
+url=http://www.google.be
 
 # Lucene properties:
 buffer.size=128
@@ -53,8 +55,8 @@ max.read.length=1000000
 index.directory.path=./index
 
 #General JDBC settings
-jdbc.minPoolSize=10
-jdbc.maxPoolSize=100
+jdbc.minPoolSize=1
+jdbc.maxPoolSize=10
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=360000000
 jdbc.numHelperThreads=5
