git-svn-id: http://ikube.googlecode.com/svn/trunk@158 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/core/src/main/resources/META-INF/spring.properties
+++ b/modules/core/src/main/resources/META-INF/spring.properties
@@ -1,14 +1,9 @@
 # The delay before the scheduled tasks start executing
-delay=3000
+delay=30000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the indexes
 max.age=36000000
-
-# The delay before the lock manager starts publishing events
-lock.manager.delay=1000
-# The period between events being fired
-lock.manager.period=1000
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
@@ -16,18 +11,9 @@ lock.manager.period=1000
 web.service.delay=10000
 web.service.period=10000
 
-# The delay before the reporting gets dumped
-report.delay=600000
-# The period between reports
-report.period=600000
-
-# The delay before the profiler dumps the report
-profiling.delay=3600000
-# The period between profile reports
-profiling.period=3600000
-
 # The batch size for fetching records from the database
-jdbc.batch.size=100
+jdbc.batch.size=10000
+internet.batch.size=10
 
 # The number of threads for each indexing component
 table.handler.threads=1
@@ -38,10 +24,13 @@ email.handler.threads=1
 # The path to the files to be indexed
 files.path=./modules/core/src/test/resources/data
 
+# To limit the results
+faq.predicate=where faq.faqid < 1000
+
 # The time delay between reads in the crawler
 throttle=1000
 # The first seed url for internet crawling
-url=http://www.google.be
+url=http://www.ikokoon.eu/ikokoon/index.html
 
 # Lucene properties:
 buffer.size=128
