--- a/modules/core/src/test/resources/cluster/spring.properties
+++ b/modules/core/src/test/resources/cluster/spring.properties
@@ -1,30 +1,21 @@
+# Index context/client specific parameters
+jdbc.batch.size=100
+faq.predicate=where faq.faqid < 10000
+
+throttle=10
+internet.batch.size=10
+url=http://www.ikokoon.eu/ikokoon/index.html
+
 #Configuration details for individual instances
 delay=3000
 period=60000
 max.age=3600000
-
-lock.manager.delay=1000
-lock.manager.period=1000
 
 #Eventually we want to set this to about 10 milliseconds and
 #verify that the open close and index actions do not interrupt
 #the search operations and clients
 web.service.delay=3600000
 web.service.period=3600000
-
-report.delay=600000
-report.period=600000
-
-profiling.delay=3600000
-profiling.period=3600000
-
-jdbc.batch.size=1000
-
-faq.predicate=where faq.faqid > 0
-
-throttle=100
-
-url=http://www.ikokoon.eu/ikokoon/index.html
 
 table.handler.threads=3
 internet.handler.threads=5
@@ -45,7 +36,7 @@ index.directory.path=./index
 jdbc.minPoolSize=10
 jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
-jdbc.checkOutTimeout=360000000
+jdbc.checkOutTimeout=846000000
 jdbc.numHelperThreads=5
 
 #DB2 database
