--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,19 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4.3</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
-					<encoding>UTF8</encoding>
+					<encoding>UTF-8</encoding>
 					<failOnError>true</failOnError>
 					<compilerArguments>
 						<verbose />
