--- a/modules/core/src/test/resources/spring.properties
+++ b/modules/core/src/test/resources/spring.properties
@@ -23,6 +23,7 @@ throttle=100
 url=http://www.ikokoon.eu/ikokoon/index.html
 
 jdbc.batch.size=100
+internet.batch.size=10
 
 table.handler.threads=1
 internet.handler.threads=3
