--- a/modules/war/pom.xml
+++ b/modules/war/pom.xml
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>ikube</groupId>
 			<artifactId>ikube-core</artifactId>
-			<version>${version}</version>
+			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
